src/layout/HomeLinks/HomeLinks.module.scss
@import '../../sassStyles/variables';
@import '../../sassStyles/mixins';

.mainContainer {
  display: grid;
  gap: 2rem;
  grid-template-areas:
    'mockup homeLinks'
    'mockup buttonSave';

  @include responsiveMax($phone) {
    grid-template-areas:
      'homeLinks'
      'buttonSave';
  }
}

.phone-mockup {
  margin-top: 2rem;
  display: flex;
  align-items: center;
  grid-area: mockup;
  @include responsiveMax($phone) {
    display: none;
  }
}

.homeLinks {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  grid-area: homeLinks;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-bottom: 1px solid $light-grey;

  & h1 {
    font-size: 3.2rem;
    color: $dark-grey;

    @include responsiveMax($tablet) {
      font-size: 2.4rem;
    }
  }

  @include responsiveMax($phone) {
    margin-top: 0;
  }

  &-mainInstructions {
    color: $grey;
    font-weight: lighter;
    margin-top: 0.8rem;
    line-height: 2.3rem;
    font-size: 1.2rem;

    @include responsiveMax($tablet) {
      font-size: 1.6rem;
    }
  }

  &-buttonAdd {
    text-align: center;
    margin-top: 4rem;
    margin-bottom: 2.4rem;
    font-size: 1.6rem;
  }
}

.buttonSave--container {
  display: flex;
  justify-content: flex-end;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  grid-area: buttonSave;
  margin-top: -2rem;

  & button {
    text-align: center;
    @include responsiveMax($phone) {
      width: 100%;
    }
  }
}

